[package]
name = "quicktest"
version = "0.2.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.0"
bevy_prototype_lyon = "0.13.0"
bevy_svg = "0.15.1"
